use the Integer cache where possible